[package]
name = "freeze-wl"
version = "0.1.0"
edition = "2021"

[dependencies]
tempfile = "3.5.0"
wayland-client = { version = "0.30.1" }
wayland-protocols-wlr = { version = "0.1.0", features = ["client"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
